Melhorando código da alteração de HTML antes do envio

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -27,7 +27,7 @@
         <% @campaigns.each do |campaign| %>
           <tr>
             <td><%= campaign.name %></td>
-            <td><%= campaign.shots.count == campaign.shots.queued.count ? 'Disparada' : campaign.status %></td>
+            <td><%= campaign.shots.count != 0 && campaign.shots.count == campaign.shots.queued.count ? 'Disparada' : campaign.status %></td>
             <td><%= campaign.shots.count %></td>
             <td><%= campaign.shots.queued.count %></td>
             <td><%= campaign.shots.relayed.count %></td>
