--- a/app/views/newsletters/_email_footer.html
+++ b/app/views/newsletters/_email_footer.html
@@ -34,12 +34,12 @@
                            <tbody>
                               <tr>
                                  <td align="center" valign="middle" style="font-family: Helvetica, arial, sans-serif; font-size: 14px;color: #666666" st-content="postfooter">
-                                    Caso não queira receber nossas newsletters, basta se <a href="https://newsletterfloressencial.com/shots/:shot_id/unsubscribed" style="text-decoration: none; color: #0a8cce">descadastrar</a>.
+                                    Caso não queira receber nossas newsletters, basta se <a href="http://:domain/shots/:shot_id/unsubscribed" style="text-decoration: none; color: #0a8cce">descadastrar</a>.
                                  </td>
                               </tr>
                               <!-- Spacing -->
                               <tr>
-                                 <td width="100%" height="20"><img src="https://newsletterfloressencial.com/shots/:shot_id/opened" /></td>
+                                 <td width="100%" height="20"><img src="http://:domain/shots/:shot_id/opened" /></td>
                               </tr>
                               <!-- Spacing -->
                            </tbody>
