Implementando envio baseado em relays aleatórios

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,10 @@ body {
   padding: 66px 0 15px;
 }
 
+textarea {
+  height: 200px !important;
+}
+
 .modal-footer {
   margin-top: 0 !important;
 }
