--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
               <%= menu_link_to 'Campanhas', campaigns_path %>
               <%= menu_link_to 'Listas', lists_path %>
               <%= menu_link_to 'Newsletters', newsletters_path %>
+              <%= menu_link_to 'Servidores', relays_path %>
             </ul>
           <% end %>
           <ul class="nav navbar-nav navbar-right">
