--- a/app/views/campaigns/_new.html.erb
+++ b/app/views/campaigns/_new.html.erb
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="form-group">
-                <label for="newsletter_subject">Nome</label>
+                <label for="campaign_name">Nome</label>
                 <%= f.text_field :name, class: 'form-control' %>
               </div>
             </div>
@@ -22,7 +22,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="form-group">
-                <label for="newsletter_subject">Lista</label>
+                <label for="campaign_list_id">Lista</label>
                 <%= f.collection_select(:list_id, List.where(import_finished: true).order(:name), :id, :name, {}, {class: 'form-control', multiple: true}) %>
               </div>
             </div>
@@ -31,7 +31,7 @@
           <div class="row">
             <div class="col-xs-12">
               <div class="form-group">
-                <label for="newsletter_subject">Newsletter</label>
+                <label for="campaign_newsletter_id">Newsletter</label>
                 <%= f.collection_select(:newsletter_id, Newsletter.order(:subject), :id, :subject, {}, {class: 'form-control'}) %>
               </div>
             </div>
