--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -29,13 +29,13 @@
         <% @campaigns.each do |campaign| %>
           <tr>
             <td><%= campaign.name %></td>
-            <td><%= campaign.shots.count != 0 && campaign.shots.count == campaign.shots.queued.count ? 'Disparada' : campaign.status %></td>
-            <td><%= campaign.shots.count %></td>
-            <td><%= campaign.shots.queued.count %></td>
-            <td><%= campaign.shots.relayed.count %></td>
-            <td><%= campaign.shots.opened.count %></td>
-            <td><%= campaign.shots.clicked.count %></td>
-            <td><%= campaign.shots.unsubscribed.count %></td>
+            <td><%= campaign.reach > 0 && campaign.reach == campaign.sent ? 'Disparada' : campaign.status %></td>
+            <td><%= campaign.reach %></td>
+            <td><%= campaign.sent %></td>
+            <td><%= campaign.delivered %></td>
+            <td><%= campaign.opened %></td>
+            <td><%= campaign.clicked %></td>
+            <td><%= campaign.unsubscribed %></td>
             <td class="right">
               <%= link_to 'Disparar!', campaign_chase_path(campaign), class: "btn btn-xs btn-success #{'disabled' if not campaign.status == 'Pronta para Disparar'}" %>
             </td>
