--- a/app/views/lists/_new.html.erb
+++ b/app/views/lists/_new.html.erb
@@ -14,7 +14,7 @@
             <%= form_for :list, url: lists_path do %>
               <div class="btn btn-sm btn-primary btn-block fileinput-button">
                 <span>Selecionar...</span>
-                <input type="file" name="list[file]" accept=".csv,.txt" multiple="true">
+                <input type="file" name="list[file]" accept=".csv,.txt">
               </div>
             <% end %>
           </div>
