--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -32,7 +32,7 @@
             <td><%= link_to glyph(:download, {}) + ' ' + list.invalids_count.to_s, list_download_path(list, format: :txt), title: 'Baixar Lista (emails inválidos)', class: "btn btn-xs btn-primary #{'disabled' if not list.status == 'Validação Concluída'}" %></td>
             <td><%= link_to glyph(:download, {}) + ' ' + list.unknowns_count.to_s, list_download_path(list, format: :txt), title: 'Baixar Lista (emails desconhecidos)', class: "btn btn-xs btn-primary #{'disabled' if not list.status == 'Validação Concluída'}" %></td>
             <td class="right">
-              <%= link_to 'Validar!', list_download_path(list, format: :txt), title: 'Validar Lista', class: "btn btn-xs btn-success #{'disabled' if not list.status == 'Importação Concluída'}" %>
+              <%= link_to 'Validar!', list_validate_path(list), title: 'Validar Lista', data: {method: :post, confirm: 'Tem certeza de que deseja validar esta lista?'}, class: "btn btn-xs btn-success #{'disabled' if not list.status == 'Importação Concluída'}" %>
               <%= link_to glyph(:trash, {}), list_path(list), title: 'Excluir Lista', data: {method: :delete, confirm: 'Tem certeza de que deseja excluir esta lista?'}, class: 'btn btn-xs btn-danger' %>
             </td>
           </tr>
