Corrigindo pequeno problema na tela de Campanha

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -48,7 +48,7 @@
   </div>
 
   <%= paginate @campaigns %>
-<% elsif List.where(status: 'Importação Concluída').any? && Newsletter.any? %>
+<% elsif List.where.not(status: 'Importando').any? && Newsletter.any? %>
   <div class="jumbotron">
     <h1>Campanhas</h1>
 
